--- a/src/scss/layout/_expositorio.scss
+++ b/src/scss/layout/_expositorio.scss
@@ -55,6 +55,9 @@
     .upgrade{
         background-image: url(/build/img/upgrade-index.webp);
     }
+    .to-do{
+        background-image: url(/build/img/todo-index-2.webp);
+    }
 
     .proyecto-cartel{
         display: flex;
