--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -3,7 +3,7 @@ footer{
     text-align: center;
     color: $primario;
     font-weight: $bold;
-    background-color: $claro;
+    background-color: $blanco;
     margin-top: 2rem;
 
     p{
