--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -39,6 +39,7 @@
         font-weight: $bold;
         padding: 1rem;
         text-decoration: none;
+        text-transform: uppercase;
 
         &:hover{
             background-color: $terciario;
