--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -57,15 +57,15 @@ h2,h3{
 }
 
 main{
-    background-color: $claro;
+    background-color: $blanco;
 }
 
-.sombra{
-    -webkit-box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
-    -moz-box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
-    box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
-    border-radius: 2rem;
-}
+// .sombra{
+//     -webkit-box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
+//     -moz-box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
+//     box-shadow: 10px 3px 8px 0px rgba(0,0,0,0.46);
+//     border-radius: 2rem;
+// }
 
 .naranja{
     color: $primario;
